# niri-launcher

./: .gitignore  Cargo.toml  default.nix  flake.nix
src/: error.rs  kitty.rs  lib.rs  main.rs  niri_multi_socket.rs  pstree.rs  vim.rs
